chore: profile completion status endpoints, employee password request api endpoints
