# src/swagger.json
@@ -52,6 +52,10 @@
       "description": "Authentication endpoints for employees including login, token handling, and password management."
     },
     {
+      "name": "Employee Password Request",
+      "description": "APIs for employee password request."
+    },
+    {
       "name": "Employee Users",
       "description": "APIs for managing employee accounts including onboarding, updates, listing, and deletion."
     },
@@ -827,6 +831,34 @@
         "autoBody": false
       }
     },
+    "/profile/{userId}/status": {
+      "get": {
+        "tags": [
+          "Client Profile"
+        ],
+        "summary": "Get user profile completion status",
+        "description": "",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/admin/auth/login": {
       "post": {
         "description": "",
@@ -1493,6 +1525,161 @@
         "tags": [
           "Employee Auth"
         ]
+      }
+    },
+    "/admin/password-requests": {
+      "post": {
+        "tags": [
+          "Employee Password Request"
+        ],
+        "summary": "Employee raises password reset request",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "example": "employee@example.com"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "409": {
+            "description": "Conflict"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Employee Password Request"
+        ],
+        "summary": "Get password reset requests with pagination",
+        "description": "",
+        "parameters": [
+          {
+            "name": "status",
+            "in": "query",
+            "type": "string",
+            "enum": [
+              "pending",
+              "approved",
+              "rejected"
+            ]
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "number",
+            "example": 1
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "number",
+            "example": 10
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/admin/password-requests/{requestId}/approve": {
+      "post": {
+        "tags": [
+          "Employee Password Request"
+        ],
+        "summary": "Approve password reset request",
+        "description": "",
+        "parameters": [
+          {
+            "name": "requestId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/admin/password-requests/{requestId}/reject": {
+      "post": {
+        "tags": [
+          "Employee Password Request"
+        ],
+        "summary": "Reject password reset request",
+        "description": "",
+        "parameters": [
+          {
+            "name": "requestId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "reason": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/employee/users/analytics": {
